[package]

name = "dht"
description = "Implementation of Kademlia-based DHT in Rust"
version = "0.0.1"
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/divius/rust-dht"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]

bencode = "~0.1.11"
log = "~0.3.1"
num = "~0.1.22"
rand = "~0.3.7"
rustc-serialize = "~0.3.1"

[lib]

name = "dht"
path = "src/lib.rs"
